--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "vue-socket.io": "^3.0.7"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.0.0",
     "nodemon": "^1.18.9",
-    "@nuxtjs/vuetify": "^1.0.0"
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2"
   }
 }
